--- a/CryptoBlog/todo.txt
+++ b/CryptoBlog/todo.txt
@@ -1,4 +1,14 @@
--направи функции за графиките
--направи така че да се взимат първите 6 криптовалути
--направи блог страница
--направи така че да може да се добави блог
+-помпа, аспирин, капки за нос, алергични хапчета
+-зарядно телефон
+-ретейнера
+-1.5л вода
+-четка, паста за зъби
+-джапанки
+-чорапи
+-3те чифта къси гащи
+-храна(барове, ядки, оризовки, ...)
+-слънчеви очила, крем за изгаряне, шапка
+-паларено горнище 
+-карти
+-дезодорант
+-шампоан, душ гел
