--- a/CryptoBlog/todo.txt
+++ b/CryptoBlog/todo.txt
@@ -1,14 +1,10 @@
--помпа, аспирин, капки за нос, алергични хапчета
--зарядно телефон
--ретейнера
--1.5л вода
--четка, паста за зъби
--джапанки
--чорапи
--3те чифта къси гащи
--храна(барове, ядки, оризовки, ...)
--слънчеви очила, крем за изгаряне, шапка
--паларено горнище 
--карти
--дезодорант
--шампоан, душ гел
+- коментари за всяка крипто валута (done)
+- стил на коментарите (done)
+- логин / регистрация (done)
+- добави информация за кой потребител е коментирал кой пост(done)
+- стил на формата за коментар (done)
+- центрирай графиките на главната страница(done)
+
+- оправи логин / регистрация стилове
+- оправи бутон за лог оут
+- всеки потребител да може да си премахне/промени коментара
