--- a/CryptoBlog/todo.txt
+++ b/CryptoBlog/todo.txt
@@ -4,7 +4,10 @@
 - добави информация за кой потребител е коментирал кой пост(done)
 - стил на формата за коментар (done)
 - центрирай графиките на главната страница(done)
+- оправи логин / регистрация стилове(done)
+- оправи бутон за лог оут (done)
 
-- оправи логин / регистрация стилове
-- оправи бутон за лог оут
+
 - всеки потребител да може да си премахне/промени коментара
+- премахни полето за име от формата за коментар
+- оправи стила на формата за коментар
