log and register error handling

--- a/CryptoBlog/todo.txt
+++ b/CryptoBlog/todo.txt
@@ -6,8 +6,12 @@
 - центрирай графиките на главната страница(done)
 - оправи логин / регистрация стилове(done)
 - оправи бутон за лог оут (done)
+- всеки потребител да може да си премахнек коментара(done)
+- премахни полето за име от формата за коментар(done)
+- оправи стила на формата за коментар(done)
 
 
-- всеки потребител да може да си премахне/промени коментара
-- премахни полето за име от формата за коментар
-- оправи стила на формата за коментар
+- aко съществува потребител при регистрация
+- флаш за съобщения
+- оправи бутон за добавяне на коментар
+- добави background image for the jumbotron
