flash login page

--- a/CryptoBlog/todo.txt
+++ b/CryptoBlog/todo.txt
@@ -9,9 +9,8 @@
 - всеки потребител да може да си премахнек коментара(done)
 - премахни полето за име от формата за коментар(done)
 - оправи стила на формата за коментар(done)
+- aко съществува потребител при регистрация(done)
+- флаш за съобщения(done)
+- оправи бутон за добавяне на коментар(done)
+- ако при логин няма такъв username(done)
 
-
-- aко съществува потребител при регистрация
-- флаш за съобщения
-- оправи бутон за добавяне на коментар
-- добави background image for the jumbotron
