comments almost done

--- a/CryptoBlog/todo.txt
+++ b/CryptoBlog/todo.txt
@@ -15,10 +15,12 @@
 - ако при логин няма такъв username(done)
 
 
-- премахни изискването да си регистриран за да влезеш в сайта
-- ако потребител не е регистриран не може да оставя коментар - дава му се подходящо съобщение за да се регистрира
-- ако потребител не е регистриран да му се оправи навигацията 
+- премахни изискването да си регистриран за да влезеш в сайта (done)
+- ако потребител не е регистриран не може да оставя коментар - дава му се подходящо съобщение за да се регистрира (done)
+- ако потребител не е регистриран да му се оправи навигацията (done)
 - оправи стиловете на коментарите
 - оправи стила на джъмботрона
 - направи така, че да може да се добавят приятели
 - направи страница със повече криптовалути
+- оправи триенето на коментар. Трябва да трие правилния (done)
+- reply to wrong comment fix (done)
