--- a/CryptoBlog/todo.txt
+++ b/CryptoBlog/todo.txt
@@ -18,8 +18,8 @@
 - премахни изискването да си регистриран за да влезеш в сайта (done)
 - ако потребител не е регистриран не може да оставя коментар - дава му се подходящо съобщение за да се регистрира (done)
 - ако потребител не е регистриран да му се оправи навигацията (done)
-- оправи стиловете на коментарите
-- оправи стила на джъмботрона
+- оправи стиловете на коментарите (done)
+- оправи стила на джъмботрона (done)
 - направи така, че да може да се добавят приятели
 - направи страница със повече криптовалути
 - оправи триенето на коментар. Трябва да трие правилния (done)
