--- a/CryptoBlog/todo.txt
+++ b/CryptoBlog/todo.txt
@@ -20,7 +20,10 @@
 - ако потребител не е регистриран да му се оправи навигацията (done)
 - оправи стиловете на коментарите (done)
 - оправи стила на джъмботрона (done)
-- направи така, че да може да се добавят приятели
-- направи страница със повече криптовалути
 - оправи триенето на коментар. Трябва да трие правилния (done)
 - reply to wrong comment fix (done)
+- оправи стил на сидебар (done)
+
+- направи така, че да може да се добавят приятели
+- направи страница със повече криптовалути
+- добави звезда за любима валута
