--- a/CryptoBlog/todo.txt
+++ b/CryptoBlog/todo.txt
@@ -23,7 +23,8 @@
 - оправи триенето на коментар. Трябва да трие правилния (done)
 - reply to wrong comment fix (done)
 - оправи стил на сидебар (done)
+- добавяне на любими валути (доне)
 
-- направи така, че да може да се добавят приятели
-- направи страница със повече криптовалути
-- добави звезда за любима валута
+- страница за любими валути
+- направи добавянето на коментар с ajax
+- направи го удобно за телефон
