--- a/CryptoBlog/todo.txt
+++ b/CryptoBlog/todo.txt
@@ -24,7 +24,9 @@
 - reply to wrong comment fix (done)
 - оправи стил на сидебар (done)
 - добавяне на любими валути (доне)
+- страница за любими валути (done)
+- направи го удобно за телефон (done)
 
-- страница за любими валути
 - направи добавянето на коментар с ajax
-- направи го удобно за телефон
+- при регистрация добави две полета за парола
+- при грешен логин оправи грешката
